- Fixed episodes in detail-grid (plex-template)

2015-05-24:
- Some more improvements for plex-template (III)
- Fixed height of plex-header
- Added translations for columns- and rows-info (plex-template)

2015-05-24:
- Some more improvements for plex-template (IV)
- Some more improvements for plex-template (V)

2015-05-26:
- Changed buttonPlexActiveCover.png

2015-05-31:
- Increased possible count of displayed lastrecordings to seven
- Added plug-setup-skinpreview.xml
- Adapted displayreplay for time/perma-shift
- Added replayTimeshift.svg

2015-05-31:
- Some graphical improvements for skinpreview

2015-06-01:
- Reworked plug-setup-skinpreview.xml

2015-06-02:
- Small improvements plug-setup-skinpreview.xml

2015-06-06:
- Added detailview for displaymenurecordings

2015-06-10:
- Removed detailview for displaymenurecordings, small fixes
- Removed condition for currentelemnt in displaymenurecordings

2015-06-10:
- Fixed 00_menuFadetime in displayreplay

2015-07-05:
- Added channelname if no channelogo exists in schedules-list

2015-07-07:
- Small fixes

2015-07-11:
- Fixed time-format
- Added scrollbars for plex-plugin

2015-07-15:
- Fixed layer for timeshifttotal

2015-08-01:
- Added discusage in menutimers and menurecordings (optional)

2015-08-01:
- Added progressmodeonly in displayreplay

2016-01-12:
- Added numrecordingsfolder and newrecordingsfolder in recordingslists (Patch provided by P. Maier)

2016-01-21:
- Fixed conditions for neutrinoepg
- Added starttimes for neutrinoepg

2016-01-24:
- Fixed areas of numrecordingsfolder and newrecordingsfolder in recordingslist

2016-01-26:
- Workaround for NeutrinoEPG

2016-02-02:
- Added EPG-images in displaymenudetailepg, displaymenudetailrecording and plug-tvguideng-detail

2016-02-05:
- Fixed conditions in displaymenudetailrecording
- Fixed conditions in displaymenudetailepg and tvguideng-detail

2016-02-10:
- Adapted for skindesigner-0.8.x
- Some small fixes in menurecordings